# dagzip

./: .gitignore  README.md  format.md  pyproject.toml
dagzip/: chunker.py  cli.py  compressor.py  dag_builder.py  diff.py  encryptor.py  extractor.py  server.py  utils.py
gui/: dag_viewer.py  main_window.py  utils.py
